parser/metamodel/src/test/data/errors/EmptyPackageEOF.mm.merr
File: parser/metamodel/src/test/data/badModels/tekgenesis/sales/EmptyPackageEOF.mm
